docs: add multi-GPU setup guide